new skybox added

--- a/Szeminarium1_24_02_17_2/Szeminarium1_24_02_17_2.csproj
+++ b/Szeminarium1_24_02_17_2/Szeminarium1_24_02_17_2.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\skybox.png" />
+    <None Remove="Resources\space.png" />
     <None Remove="Resources\teapot.obj" />
     <None Remove="Shaders\FragmentShader.frag" />
     <None Remove="Shaders\VertexShader.vert" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\skybox.png" />
+    <EmbeddedResource Include="Resources\space.png" />
     <EmbeddedResource Include="Resources\teapot.obj" />
     <EmbeddedResource Include="Shaders\FragmentShader.frag" />
     <EmbeddedResource Include="Shaders\VertexShader.vert" />
